--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{https://sipengshen01.github.io/shensipeng/}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">You can also find my articles on <a href="{{https://scholar.google.com/citations?user=AhQD6FQAAAAJ&hl=en}}">my Google Scholar profile</a>.</div>
 {% endif %}
 
 {% include base_path %}
