--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,7 +5,7 @@ permalink: /publications/
 author_profile: true
 ---
 
-<div class="wordwrap">You can also find my articles on <a href="{{https://scholar.google.com/citations?user=AhQD6FQAAAAJ&hl=en}}">my Google Scholar profile</a>.</div>
+You can also find my articles on <a href="{{https://scholar.google.com/citations?user=AhQD6FQAAAAJ&hl=en}}">my Google Scholar profile</a>.
 
 
 
